# fireworks

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/: Firework.h  Particle.h  particle.h
src/: Firework.cpp  Particle.cpp  main.cpp  particle.cpp
